set up project and added a java fx launcher.